k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-dev   # Namespace для изоляции окружения (например, dev)
# kubectl apply -f namespace.yaml
