k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: app-dev
spec:
  selector:
    app: user-service-deployment-selector   # Service ищет Pods с этим label
  ports:
    - port: 80         # Порт внутри кластера, на который обращаются другие сервисы
      targetPort: 8080 # Порт контейнера внутри Pod
  type: ClusterIP      # Доступен только внутри кластера
# kubectl apply -f service.yaml
